--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,18 @@
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   line-height: 1.5;
   display:flex;
+  background-color: black;
+  flex-wrap: wrap;
+  
+}
+
+.grid-image-A{
+  display:flex;
+  width: 90px;
+  
+
+  
+  
 }
 
 .grid-image0 {
@@ -30,24 +42,28 @@
 
 .grid-image1{
   display:flex;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
   width: 50%;
-  padding:
+  
+  
 }
 .grid-image2{
   display:flex;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
   width: 50%;
+  
 }
 .grid-image3{
   display:flex;
   justify-content: space-evenly;
   width: 50%;
+  flex-wrap: wrap;
 }
 .grid-image4{
   display:flex;
   justify-content: space-evenly;
   width: 50%;
+  flex-wrap: wrap;
 }
   
 
@@ -104,18 +120,28 @@ nav a:hover {
 }
 
 .page-section h3  {
-  display:flex;
-  align-content: flex-start;
-  justify-content: flex-start;
-  padding:1rem;
-  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  font-size: 32px;
+  background-color: black;
+  color:white;
 }
+  p {
+    background-color: black;
+    color:white;
+  justify-content:right;
+  font-size: larger;
+ 
+  }
+
+ 
 .page-section h4  {
   display:flex;
-  align-content: flex-start;
-  justify-content: flex-start;
+  color:white;
+  background-color:slategray;
+  justify-content: center;
   padding:1rem;
-  font-size: 24px;
+  font-size: 32px;
 }
 
 .page-section-about {
@@ -129,12 +155,21 @@ nav a:hover {
 
 .page-section h5  {
   display:flex;
-  align-content: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   padding:1rem;
-  font-size: 24px;
-
-
+  font-size: 32px;
+  background-color: slategray;
 }
+
+.contact p {
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  padding: 10px;
+  }
+
+  .contact button {
+    display:flex;
+  }
 
 
